--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
 </head>
 <body class="page">
+    <!-- en-tête de la pgae -->
     <header class="head">
         
         <img id="logo" src="https://www.docplanner.com/img/logo-default-group-en.svg?v=1" height="50"  alt="this is the logo of the campagny">
+        <!-- navbar de la page -->
         <nav class="navbar">
             <ul>
                 <li><a id="about" href="#about">About us</a></li>
@@ -45,6 +47,7 @@
             <h2>
                 Find a doctor, book a visit and solve any health-related doubt
             </h2>
+            <!-- création d'options -->
             <select>
                 <option value="Choose country">Choose country</option>
                 <option value="Argentina">Argentina</option>
@@ -68,6 +71,7 @@
             <h2>
                 Save time managing visits and cut no-shows by half
             </h2>
+            <!-- création d'options -->
             <select>
                 <option value="Choose country">Choose country</option>
                 <option value="Argentina">Argentina</option>
@@ -89,6 +93,7 @@
             <img src="https://www.docplanner.com/icons/icon-clinics.svg" alt="this is an icon of a clinic">
             <h1>For clinics</h1>
             <h2>Deliver an exceptional patient experience in your clinic</h2>
+            <!-- création d'options -->
             <select>
                 <option value="2 to 20 specialists">2 to 20 specialists</option>
                 <option value="Argentina">Argentina</option>
@@ -126,6 +131,7 @@
         <div class="random">
             <h2>We are a global <br> company <br>
                 with local culture</h2>
+                <!-- image des logos de l'entreprise avec d'autres langues -->
                 <figure id="figr1">
                     <img id="z" src="/image/z.png" height="135" alt="this is the logo of the website">
                     <img id="d" src="/image/d.png" height="135" alt="this is the logo of the website">
